--- a/Practico_ANS.ipynb
+++ b/Practico_ANS.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,10 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn import metrics\n",
     "import scikitplot as skplt\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "%matplotlib inline\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -1701,12 +1705,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pureza para k=2: 1.0\n",
+      "Pureza para k=3: 0.8771788413098237\n",
+      "Pureza para k=4: 0.724735516372796\n",
+      "Pureza para k=5: 0.6188413098236776\n",
+      "Pureza para k=6: 0.5069017632241813\n",
+      "Pureza para k=7: 0.4838287153652393\n",
+      "Pureza para k=8: 0.4553148614609572\n",
+      "Pureza para k=9: 0.4177329974811083\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO\n",
-    "\n"
+    "scaler = StandardScaler()\n",
+    "X_entr_sca = scaler.fit_transform(player_df_subconjunto)\n",
+    "\n",
+    "pca = PCA(n_components=4)\n",
+    "pca_x_entr = pca.fit_transform(X_entr_sca)\n",
+    "\n",
+    "for bucle in range(2, 10):\n",
+    "    km_pred = KMeans(n_clusters = bucle, random_state = 42).fit_predict(pca_x_entr)\n",
+    "    km_pred\n",
+    "    contingency_matrix = metrics.cluster.contingency_matrix(player_position_list, km_pred)\n",
+    "    print('Pureza para k={}: {}'.format(bucle, contingency_matrix.max(axis = 1).sum() / contingency_matrix.sum()))\n"
    ]
   },
   {
